--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "facebook-login-react-component",
+  "name": "facebook-login-react",
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
@@ -16,7 +16,6 @@
     "react-dom": "^17.0.1",
     "sass": "^1.32.6",
     "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
