--- a/package.json
+++ b/package.json
@@ -6,11 +6,36 @@
     "start": "NODE_ENV=development webpack serve --inline --config webpack.config.js",
     "bundle": "NODE_ENV=production webpack --config webpack.dist.config.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sb89/facebook-login-react-component.git"
+  },
+  "keywords": [
+    "react",
+    "reactjs",
+    "facebook-login",
+    "react component",
+    "facebook-login-react-component"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/sb89/facebook-login-react-component/issues"
+  },
+  "homepage": "https://github.com/sb89/facebook-login-react-component",
   "devDependencies": {
     "@babel/core": "^7.12.13",
+    "@babel/eslint-parser": "^7.12.13",
+    "@babel/eslint-plugin": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.2",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.5.0",
     "postcss-loader": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
