--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "facebook-login-react",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "dist/index.js",
+  "types": "index.d.ts",
   "scripts": {
     "start": "NODE_ENV=development webpack serve --inline --config webpack.config.js",
     "bundle": "NODE_ENV=production webpack --config webpack.dist.config.js"
